[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.19.0", features = ["extern_crate_alloc", "derive"] }
error-stack = "0.5.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
pollster = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = { version = "23.0.0", features = ["glsl"] }
winit = "0.30.5"
